[package]
name = "modern-roman-clock"
version = "0.1.0"
authors = ["sardap <paul@sarda.dev>"]
edition = "2018"
description = "A crate that no one should use that converts chrono time to a modernized way of how the romans told time"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
chrono = "0.4.39"
chrono-tz = "0.10.1"
num-ordinal = "0.2.0"
sunrise = "1.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.77"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
itertools = "0.14.0"

[build-dependencies]
chrono = "0.4.39"
convert_case = "0.7.1"
serde_json = "1.0.138"
serde = {version = "1.0.217", features = ["derive"]}


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
